--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Example website for 'Improving Web Performance' training",
   "main": "server/server.js",
   "scripts": {
+    "imagemin": "node ./tools/imageOptimizer.js",
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "config": {
+    "server-port": 3000,
+    "server-delay": 200
   },
   "repository": {
     "type": "git",
@@ -27,6 +32,11 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "compression": "^1.7.4",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "imagemin": "7.0.1",
+    "imagemin-gifsicle": "7.0.0",
+    "imagemin-jpegtran": "7.0.0",
+    "imagemin-pngquant": "9.0.1",
+    "imagemin-svgo": "8.0.0"
   }
 }
